# crg-data-pipeline

./: .gitignore  Dockerfile  Dockerfile.marquez  Dockerfile.marquez-web  README.md  docker-compose.yml  hello_lineage.py  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  constants.py  lineage.py  main.py  master_schema.py  mcp_server.py  pipeline.py  quality.py
config/: marquez.yml
data/: master_schema.json
data/sample_fhir/: anomaly_bundle.json  clean_bundle.json
scripts/: marquez-entrypoint.sh
tests/: test_lineage.py  test_pipeline.py  test_quality.py
